bug: fix sidebar size on mobile screen

--- a/src/components/organisms/Layout/Layout.scss
+++ b/src/components/organisms/Layout/Layout.scss
@@ -53,7 +53,7 @@
 
   @media (max-width: $phone) {
     left: 0;
-    width: 50%;
+    width: 70vw;
     z-index: 3;
   }
 
